--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <base href="/" />
-        <title>Titre</title>
+        <title>3D Test World</title>
     </head>
     <body>
         <div id="app"></div>
